--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -1,2 +1,10 @@
 PORT=5000
+
 DB_URL = "mongodb://localhost:27017/Ecommerce"
+
+JWT_SECRET = KLMDKLFDDKDFJDKLFJDKFJDFKDFJKDFJDKLFJDKFJ
+
+JWT_EXPIRE=5d
+
+COOKIE_EXPIRE=5
+
