added forget password

--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -8,3 +8,12 @@ JWT_EXPIRE=5d
 
 COOKIE_EXPIRE=5
 
+SMPT_SERVICE = gmail
+
+SMPT_MAIL = farukhsajjad110@gmail.com
+
+SMPT_PASSWORD = razasajjad
+
+SMPT_HOST = smtp.gmail.com
+
+SMPT_PORT = 465
