--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,11 @@
     "react-bootstrap": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-js-pagination": "^3.0.3",
     "react-material-ui-carousel": "^3.3.3",
     "react-rating-stars-component": "^2.2.0",
     "react-redux": "^7.2.6",
-    "react-router-dom": "^6.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
