--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
+    "swiper": "^8.2.4",
     "web-vitals": "^2.1.0",
     "webfontloader": "^1.6.28"
   },
