--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -17,3 +17,7 @@ SMPT_PASSWORD = razasajjad
 SMPT_HOST = smtp.gmail.com
 
 SMPT_PORT = 465
+
+CLOUDINARY_NAME = farukh-sajjad
+CLOUDINARY_API_KEY = 426948834262394
+CLOUDINARY_API_SECRET = kyJjUcqC9Ev3ikwkKwrAuRipb0A
