--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -2,6 +2,8 @@ PORT=5000
 
 DB_URL = "mongodb://localhost:27017/Ecommerce"
 
+FRONTEND_URL = "http://localhost:3000"
+
 JWT_SECRET = KLMDKLFDDKDFJDKLFJDKFJDFKDFJKDFJDKLFJDKFJ
 
 JWT_EXPIRE=5d
@@ -12,7 +14,7 @@ SMPT_SERVICE = gmail
 
 SMPT_MAIL = farukhsajjad110@gmail.com
 
-SMPT_PASSWORD = razasajjad
+SMPT_PASSWORD = sooszndvhxslzjqw
 
 SMPT_HOST = smtp.gmail.com
 
