--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,14 @@
   "dependencies": {
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@stripe/react-stripe-js": "^1.10.0",
+    "@stripe/stripe-js": "^1.35.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "country-state-city": "^3.0.1",
     "font-awesome": "^4.7.0",
     "react": "^17.0.2",
     "react-alert": "^7.0.3",
